Actualización versión IAIP Oaxaca
Footer con datos propios de IAIP Oaxaca
Header con el logo de IAIP Oaxaca
Breadcum nombre del IAIP Oaxaca

--- a/contratacionesabiertas/captura/config/config.json
+++ b/contratacionesabiertas/captura/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "prueba_captura",
     "password": "p4ssw0rd",
-    "database": "edca_generica",
+    "database": "edca",
     "host": "localhost",
     "dialect": "postgres",
     "operatorsAliases": 0
